tests/ui/wrapper/fail/non-dyn-traits-not-allowed.stderr
error: Macro accepts only form of `type Trait1and2Ref = dyn Trait1 + Trait2`
 --> tests/ui/wrapper/fail/non-dyn-traits-not-allowed.rs:9:1
  |
9 | #[openbrush::wrapper]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `openbrush::wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `openbrush::traits::AccountId`
 --> tests/ui/wrapper/fail/non-dyn-traits-not-allowed.rs:1:5
  |
1 | use openbrush::traits::AccountId;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0433]: failed to resolve: use of undeclared type `Trait1Ref`
  --> tests/ui/wrapper/fail/non-dyn-traits-not-allowed.rs:16:24
   |
16 |         let foo_bool = Trait1Ref::foo(&callee);
   |                        ^^^^^^^^^
   |                        |
   |                        use of undeclared type `Trait1Ref`
   |                        help: a trait with a similar name exists: `Trait1`

error[E0782]: trait objects must include the `dyn` keyword
  --> tests/ui/wrapper/fail/non-dyn-traits-not-allowed.rs:20:1
   |
20 | #[openbrush::wrapper]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `openbrush::wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)
